Edit, Update, Delete, Repositories, Views, DTOs, MapProfiles, Interfaces, Operations and etc ...

--- a/GILI-Inventory/appsettings.json
+++ b/GILI-Inventory/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "InventoryData": "server=DESKTOP-5D9HC9G;Database=InventoryData;Trusted_Connection=true;"
-    },
+  "ConnectionStrings": {
+    "InventoryData": "server=DESKTOP-OT9UJ0R;Database=InventoryData;Trusted_Connection=true;"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
