ავტორიზაცია, მომხმარებლები, განახლებები

--- a/GILI-Inventory/appsettings.json
+++ b/GILI-Inventory/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "InventoryData": "server=DESKTOP-OT9UJ0R;Database=InventoryData;Trusted_Connection=true;"
+    "InventoryData": "server=DESKTOP-5D9HC9G;Database=InventoryData;Trusted_Connection=true;"
   },
     "Logging": {
         "LogLevel": {
